--- a/force-app/test/default/classes/SummitEventsConfirmation_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsConfirmation_TEST.cls
@@ -100,7 +100,7 @@ private class SummitEventsConfirmation_TEST {
                             Summit_Events_Registration__c
                     WHERE Id = :seaTestRegistration.Id
             ];
-            System.assertEquals(checkRegistrationStatus.Status__c, 'Started');
+            System.assertEquals(checkRegistrationStatus.Status__c, 'Registered');
             Test.stopTest();
         }
     }
